--- a/my_site/html/index.html
+++ b/my_site/html/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles/style_new.css">
+    <link rel="stylesheet" href="../styles/style_index.css">
     <title>Main</title>
 </head>
 <body>
 <header>
     <div class="logo"><img src="../images/i.png" height="60px" width="60px"/></div>
     <h1>МОЙ САЙТ</h1>
+<a href="table.html">
+    <div class="link"><img src="../images/link.png" height="60px" width="70px"/></div>
+    <p class="linktable">Таблица Менделеева</p>
+</a>
 </header>
 <main class="content">
     <div class="block1"><img class="ava" src="../images/ava.jpg"/> </div>
