--- a/my_site/html/test.html
+++ b/my_site/html/test.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main</title>
-    <link rel="stylesheet" href="../styles/style_index.css">
+    <title>test</title>
+    <link rel="stylesheet" href="../styles/test.css">
 </head>
 <body>
 <header>
@@ -56,73 +56,48 @@
             </div>
         </div>
     </div>
+
+
 </section>
 
 <section class="content_2">
     <! -- первый блок через flex, второй через grid -->
     <div class="box1">
         <div class="img1">
-            <img class="cat1" src="../images/cat1.png">
+
         </div>
         <div class="text1">
-            <p class="cat1_text">
-                Мeйн-кун — одна из самых крупных пород домашних кошек. Их слабый, тихий голос кажется удивительным для таких внушительных размеров.
-            </p>
+
         </div>
     </div>
 
     <div class="box1">
         <div class="img1">
-            <img class="cat1" src="../images/cat2.jpg">
+
         </div>
         <div class="text1">
-            <p class="cat1_text">
-                Кимрики — очень спокойные кошки с высоким социальным интеллектом. Они ориентированы на человека и искренне привязываются к членам своей семьи.
-            </p>
+
         </div>
     </div>
 
     <div class="box1">
         <div class="img1">
-            <img class="cat1" src="../images/cat3.jpg">
+
         </div>
         <div class="text1">
-            <p class="cat1_text">
-                Сибирские кошки — это живые, умные, ласковые и невероятно игривые животные, которые любят участвовать в делах семьи.
-                Они хорошо уживаются с другими кошками, собаками, детьми и нуждаются во внимании членов семьи.
-            </p>
+
         </div>
     </div>
 
     <div class="box1">
         <div class="img1">
-            <img class="cat1" src="../images/cat4.jpg">
+
         </div>
         <div class="text1">
-            <p class="cat1_text">
-                Британские длинношерстные кошки очень общительны и любят находиться рядом с людьми, особенно со своими владельцами.
-                Они с удовольствием играют в одиночестве и найдут, чем себя занять в отсутствие владельца.
-            </p>
+
         </div>
     </div>
 
-</section>
-
-<section class="content_3">
-    <div class="one_gr">
-        <div class="one_gr_1">
-            <img class="flow1" src="../images/flow1.png">
-
-        </div>
-        <div class="one_gr_2">
-            <p class="flow_text">
-                Африканские маргаритки
-            </p>
-        </div>
-    </div>
-    <div class="two_gr">f</div>
-    <div class="three_gr">f</div>
-    <div class="four_gr">f</div>
 </section>
 </main>
 
