--- a/my_site/html/index.html
+++ b/my_site/html/index.html
@@ -112,17 +112,43 @@
     <div class="one_gr">
         <div class="one_gr_1">
             <img class="flow1" src="../images/flow1.png">
-
         </div>
-        <div class="one_gr_2">
+            <div class="one_gr_2">
             <p class="flow_text">
                 Африканские маргаритки
             </p>
+            </div>
+    </div>
+    <div class="two_gr">
+        <div class="one_gr_1">
+            <img class="flow1" src="../images/flow2.jpg">
+        </div>
+        <div class="one_gr_2">
+            <p class="flow_text">
+                Бегония
+            </p>
         </div>
     </div>
-    <div class="two_gr">f</div>
-    <div class="three_gr">f</div>
-    <div class="four_gr">f</div>
+    <div class="three_gr">
+        <div class="one_gr_1">
+            <img class="flow1" src="../images/flow3.png">
+        </div>
+        <div class="one_gr_2">
+            <p class="flow_text">
+                Белый лотос
+            </p>
+        </div>
+    </div>
+    <div class="four_gr">
+        <div class="one_gr_1">
+            <img class="flow1" src="../images/flow4.jpg">
+        </div>
+        <div class="one_gr_2">
+            <p class="flow_text">
+                Бругмансия
+            </p>
+        </div>
+    </div>
 </section>
 </main>
 
