--- a/my_site/html/test.html
+++ b/my_site/html/test.html
@@ -1,105 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <title>Корпоративные принципы Факта</title>
     <meta charset="UTF-8">
-    <title>test</title>
-    <link rel="stylesheet" href="../styles/test.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../styles/test.css">
 </head>
 <body>
-<header>
-    <div class="logo">
-        <img src="../images/i.png" height="60px" width="60px"/>
-    </div>
-    <h1>МОЙ САЙТ</h1>
-    <div class="link">
-        <a href="table.html">
-            <p class="linktable">Таблица Менделеева</p>
-            <div class="arrow">
-                <img src="../images/arrow.png" height="60px" width="120px"/>
-            </div>
-        </a>
-    </div>
-
-
-</header>
-
-<section class="content">
-    <div class="block1">
-        <div class="ava">
-            <img class="ava_style" src="../images/ava.jpg"/>
-        </div>
-    </div>
-    <div class="block2">
-        <div class="name">
-            <div class="name1">
-                <h2 class="name_style">Михаил Толстов</h2>
-            </div>
-        </div>
-        <div class="about">
-            <div class="about1">
-                <p class="about_style"><b>Немного о себе:</b>
-                    <br><br>
-                    Мне 22 года. Я учился в МГТУ им. Носова, получил экномическую специальность.
-                    Работал на стройке, в банке. Мое любиоме хобби это прогулки на велосипеде, просмотр всяких фильмов,
-                    иногда люблю приготовить какое-нибудь оригинальное блюдо. Хочу научиться хорошо верстать.
-                </p>
-            </div>
-        </div>
-        <div class="study">
-            <div class="study1">
-                <p class="study_style">
-                    Занятия мне нравятся. Много всего нового и интересного. Где-то бывает не успеваю.
-                    Но как правило, если что-то не успел, пересматриваю в лекциях.
-                    Наверное, мне пока что нечего будет предложить, так как меня пока что
-                    все устраивает.
-                </p>
-            </div>
-        </div>
-    </div>
-
-
-</section>
-
-<section class="content_2">
-    <! -- первый блок через flex, второй через grid -->
-    <div class="box1">
-        <div class="img1">
-
-        </div>
-        <div class="text1">
-
-        </div>
-    </div>
-
-    <div class="box1">
-        <div class="img1">
-
-        </div>
-        <div class="text1">
-
-        </div>
-    </div>
-
-    <div class="box1">
-        <div class="img1">
-
-        </div>
-        <div class="text1">
-
-        </div>
-    </div>
-
-    <div class="box1">
-        <div class="img1">
-
-        </div>
-        <div class="text1">
-
-        </div>
-    </div>
-
+<main>
+<section class="grid">
+    <div class="one_new">Header</div>
+    <div class="two">block1</div>
+    <div class="three">block2</div>
+    <div class="one">block</div>
+    <div class="two">block1</div>
+    <div class="three">block2</div>
 </section>
 </main>
-
 </body>
 </html>
